bk_ida/gccida/g3/memrefs_conflict_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:1991:4: error: expected ';' after expression
rtx v9; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:1991:5: error: use of undeclared identifier 'v9'
rtx v9; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:1997:4: error: expected ';' after expression
rtx v15; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:1997:5: error: use of undeclared identifier 'v15'
rtx v15; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2000:4: error: expected ';' after expression
rtx addr_0; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2000:5: error: use of undeclared identifier 'addr_0'
rtx addr_0; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2004:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2004:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2012:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2012:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2024:4: error: expected ';' after expression
rtx x1a; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2024:5: error: use of undeclared identifier 'x1a'; did you mean 'x1'?
rtx x1a; // [rsp+8h] [rbp-50h] 
    ^~~
    x1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2023:18: note: 'x1' declared here
 struct rtx_def *x1; // [rsp+8h] [rbp-50h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2026:4: error: expected ';' after expression
rtx y1a; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2026:5: error: use of undeclared identifier 'y1a'; did you mean 'y1'?
rtx y1a; // [rsp+10h] [rbp-48h] 
    ^~~
    y1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2025:18: note: 'y1' declared here
 struct rtx_def *y1; // [rsp+10h] [rbp-48h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2027:4: error: expected ';' after expression
rtx x0; // [rsp+18h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2027:5: error: use of undeclared identifier 'x0'
rtx x0; // [rsp+18h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2028:4: error: expected ';' after expression
rtx x0a; // [rsp+18h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2028:5: error: use of undeclared identifier 'x0a'
rtx x0a; // [rsp+18h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/alias.c:2033:1: error: use of undeclared identifier 'v9'
v9 = y; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/memrefs_conflict_p/src/obj/alias.o] Error 1
